y.output
State 14 conflicts: 11 shift/reduce
State 26 conflicts: 3 shift/reduce
State 29 conflicts: 11 shift/reduce
State 30 conflicts: 11 shift/reduce
State 83 conflicts: 11 shift/reduce


Grammar

    0 $accept: yyyAugNonterm $end

    1 $@1: %empty

    2 yyyAugNonterm: $@1 Program

    3 Program: %empty
    4        | FuncList

    5 FuncList: Funcdef
    6         | FuncList Funcdef

    7 Funcdef: id '(' Args ')' StmtList TEND ';'

    8 Args: %empty
    9     | ArgsTrailed id
   10     | ArgsTrailed
   11     | id

   12 ArgsTrailed: id ','
   13            | ArgsTrailed id ','

   14 StmtList: %empty
   15         | Stmt
   16         | StmtList Stmt

   17 Stmt: TVAR id assignment Expression ';'
   18     | id assignment Expression ';'
   19     | IfExprHead StmtList TEND ';'
   20     | IfExprHead StmtList TELSE StmtList TEND ';'
   21     | LoopHead StmtList TEND ';'
   22     | TBREAK id ';'
   23     | TCONT id ';'
   24     | MemAcess assignment Expression ';'
   25     | Expression ';'
   26     | TRETURN Expression ';'

   27 IfExprHead: TIF Expression TTHEN

   28 LoopHead: id ':' TLOOP

   29 Unary: TNOT
   30      | '-'
   31      | '*'

   32 UnaryList: Unary
   33          | UnaryList Unary

   34 PrefixTerm: UnaryList Term

   35 SumExpr: Term '+' Term
   36        | SumExpr '+' Term

   37 ProductExpr: Term '*' Term
   38            | ProductExpr '*' Term

   39 AndExpr: Term TAND Term
   40        | AndExpr TAND Term

   41 CompareExpr: Term lessThan Term
   42            | Term '#' Term

   43 Expression: PrefixTerm
   44           | SumExpr
   45           | ProductExpr
   46           | AndExpr
   47           | CompareExpr
   48           | Term

   49 CallArgs: %empty
   50         | CallArgsTrailed Expression
   51         | CallArgsTrailed
   52         | Expression

   53 CallArgsTrailed: Expression ','
   54                | CallArgsTrailed Expression ','

   55 MemAcess: '*' Term

   56 Call: id '(' CallArgs ')'

   57 Term: number
   58     | '(' Expression ')'
   59     | id
   60     | Call


Terminals, with rules where they appear

$end (0) 0
'#' (35) 42
'(' (40) 7 56 58
')' (41) 7 56 58
'*' (42) 31 37 38 55
'+' (43) 35 36
',' (44) 12 13 53 54
'-' (45) 30
':' (58) 28
';' (59) 7 17 18 19 20 21 22 23 24 25 26
error (256)
TIF (258) 27
TTHEN (259) 27
TELSE (260) 20
TEND (261) 7 19 20 21
TRETURN (262) 26
TLOOP (263) 28
TBREAK (264) 22
TCONT (265) 23
TVAR (266) 17
TNOT (267) 29
TAND (268) 39 40
id (269) 7 9 11 12 13 17 18 22 23 28 56 59
number (270) 57
lessThan (271) 41
assignment (272) 17 18 24


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
yyyAugNonterm (28)
    on left: 2, on right: 0
$@1 (29)
    on left: 1, on right: 2
Program (30)
    on left: 3 4, on right: 2
FuncList (31)
    on left: 5 6, on right: 4 6
Funcdef (32)
    on left: 7, on right: 5 6
Args (33)
    on left: 8 9 10 11, on right: 7
ArgsTrailed (34)
    on left: 12 13, on right: 9 10 13
StmtList (35)
    on left: 14 15 16, on right: 7 16 19 20 21
Stmt (36)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 15 16
IfExprHead (37)
    on left: 27, on right: 19 20
LoopHead (38)
    on left: 28, on right: 21
Unary (39)
    on left: 29 30 31, on right: 32 33
UnaryList (40)
    on left: 32 33, on right: 33 34
PrefixTerm (41)
    on left: 34, on right: 43
SumExpr (42)
    on left: 35 36, on right: 36 44
ProductExpr (43)
    on left: 37 38, on right: 38 45
AndExpr (44)
    on left: 39 40, on right: 40 46
CompareExpr (45)
    on left: 41 42, on right: 47
Expression (46)
    on left: 43 44 45 46 47 48, on right: 17 18 24 25 26 27 50 52 53
    54 58
CallArgs (47)
    on left: 49 50 51 52, on right: 56
CallArgsTrailed (48)
    on left: 53 54, on right: 50 51 54
MemAcess (49)
    on left: 55, on right: 24
Call (50)
    on left: 56, on right: 60
Term (51)
    on left: 57 58 59 60, on right: 34 35 36 37 38 39 40 41 42 48 55


State 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 ($@1)

    yyyAugNonterm  go to state 1
    $@1            go to state 2


State 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


State 2

    2 yyyAugNonterm: $@1 . Program

    id  shift, and go to state 4

    $default  reduce using rule 3 (Program)

    Program   go to state 5
    FuncList  go to state 6
    Funcdef   go to state 7


State 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


State 4

    7 Funcdef: id . '(' Args ')' StmtList TEND ';'

    '('  shift, and go to state 8


State 5

    2 yyyAugNonterm: $@1 Program .

    $default  reduce using rule 2 (yyyAugNonterm)


State 6

    4 Program: FuncList .
    6 FuncList: FuncList . Funcdef

    id  shift, and go to state 4

    $default  reduce using rule 4 (Program)

    Funcdef  go to state 9


State 7

    5 FuncList: Funcdef .

    $default  reduce using rule 5 (FuncList)


State 8

    7 Funcdef: id '(' . Args ')' StmtList TEND ';'

    id  shift, and go to state 10

    $default  reduce using rule 8 (Args)

    Args         go to state 11
    ArgsTrailed  go to state 12


State 9

    6 FuncList: FuncList Funcdef .

    $default  reduce using rule 6 (FuncList)


State 10

   11 Args: id .
   12 ArgsTrailed: id . ','

    ','  shift, and go to state 13

    $default  reduce using rule 11 (Args)


State 11

    7 Funcdef: id '(' Args . ')' StmtList TEND ';'

    ')'  shift, and go to state 14


State 12

    9 Args: ArgsTrailed . id
   10     | ArgsTrailed .
   13 ArgsTrailed: ArgsTrailed . id ','

    id  shift, and go to state 15

    $default  reduce using rule 10 (Args)


State 13

   12 ArgsTrailed: id ',' .

    $default  reduce using rule 12 (ArgsTrailed)


State 14

    7 Funcdef: id '(' Args ')' . StmtList TEND ';'

    TIF      shift, and go to state 16
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    TIF       [reduce using rule 14 (StmtList)]
    TRETURN   [reduce using rule 14 (StmtList)]
    TBREAK    [reduce using rule 14 (StmtList)]
    TCONT     [reduce using rule 14 (StmtList)]
    TVAR      [reduce using rule 14 (StmtList)]
    TNOT      [reduce using rule 14 (StmtList)]
    id        [reduce using rule 14 (StmtList)]
    number    [reduce using rule 14 (StmtList)]
    '('       [reduce using rule 14 (StmtList)]
    '-'       [reduce using rule 14 (StmtList)]
    '*'       [reduce using rule 14 (StmtList)]
    $default  reduce using rule 14 (StmtList)

    StmtList     go to state 27
    Stmt         go to state 28
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 15

    9 Args: ArgsTrailed id .
   13 ArgsTrailed: ArgsTrailed id . ','

    ','  shift, and go to state 42

    $default  reduce using rule 9 (Args)


State 16

   27 IfExprHead: TIF . Expression TTHEN

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 45
    Call         go to state 40
    Term         go to state 41


State 17

   26 Stmt: TRETURN . Expression ';'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 46
    Call         go to state 40
    Term         go to state 41


State 18

   22 Stmt: TBREAK . id ';'

    id  shift, and go to state 47


State 19

   23 Stmt: TCONT . id ';'

    id  shift, and go to state 48


State 20

   17 Stmt: TVAR . id assignment Expression ';'

    id  shift, and go to state 49


State 21

   29 Unary: TNOT .

    $default  reduce using rule 29 (Unary)


State 22

   18 Stmt: id . assignment Expression ';'
   28 LoopHead: id . ':' TLOOP
   56 Call: id . '(' CallArgs ')'
   59 Term: id .

    assignment  shift, and go to state 50
    '('         shift, and go to state 51
    ':'         shift, and go to state 52

    $default  reduce using rule 59 (Term)


State 23

   57 Term: number .

    $default  reduce using rule 57 (Term)


State 24

   58 Term: '(' . Expression ')'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 53
    Call         go to state 40
    Term         go to state 41


State 25

   30 Unary: '-' .

    $default  reduce using rule 30 (Unary)


State 26

   31 Unary: '*' .
   55 MemAcess: '*' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    id        [reduce using rule 31 (Unary)]
    number    [reduce using rule 31 (Unary)]
    '('       [reduce using rule 31 (Unary)]
    $default  reduce using rule 31 (Unary)

    Call  go to state 40
    Term  go to state 54


State 27

    7 Funcdef: id '(' Args ')' StmtList . TEND ';'
   16 StmtList: StmtList . Stmt

    TIF      shift, and go to state 16
    TEND     shift, and go to state 55
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    Stmt         go to state 56
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 28

   15 StmtList: Stmt .

    $default  reduce using rule 15 (StmtList)


State 29

   19 Stmt: IfExprHead . StmtList TEND ';'
   20     | IfExprHead . StmtList TELSE StmtList TEND ';'

    TIF      shift, and go to state 16
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    TIF       [reduce using rule 14 (StmtList)]
    TRETURN   [reduce using rule 14 (StmtList)]
    TBREAK    [reduce using rule 14 (StmtList)]
    TCONT     [reduce using rule 14 (StmtList)]
    TVAR      [reduce using rule 14 (StmtList)]
    TNOT      [reduce using rule 14 (StmtList)]
    id        [reduce using rule 14 (StmtList)]
    number    [reduce using rule 14 (StmtList)]
    '('       [reduce using rule 14 (StmtList)]
    '-'       [reduce using rule 14 (StmtList)]
    '*'       [reduce using rule 14 (StmtList)]
    $default  reduce using rule 14 (StmtList)

    StmtList     go to state 57
    Stmt         go to state 28
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 30

   21 Stmt: LoopHead . StmtList TEND ';'

    TIF      shift, and go to state 16
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    TIF       [reduce using rule 14 (StmtList)]
    TRETURN   [reduce using rule 14 (StmtList)]
    TBREAK    [reduce using rule 14 (StmtList)]
    TCONT     [reduce using rule 14 (StmtList)]
    TVAR      [reduce using rule 14 (StmtList)]
    TNOT      [reduce using rule 14 (StmtList)]
    id        [reduce using rule 14 (StmtList)]
    number    [reduce using rule 14 (StmtList)]
    '('       [reduce using rule 14 (StmtList)]
    '-'       [reduce using rule 14 (StmtList)]
    '*'       [reduce using rule 14 (StmtList)]
    $default  reduce using rule 14 (StmtList)

    StmtList     go to state 58
    Stmt         go to state 28
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 31

   32 UnaryList: Unary .

    $default  reduce using rule 32 (UnaryList)


State 32

   33 UnaryList: UnaryList . Unary
   34 PrefixTerm: UnaryList . Term

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary  go to state 59
    Call   go to state 40
    Term   go to state 60


State 33

   43 Expression: PrefixTerm .

    $default  reduce using rule 43 (Expression)


State 34

   36 SumExpr: SumExpr . '+' Term
   44 Expression: SumExpr .

    '+'  shift, and go to state 61

    $default  reduce using rule 44 (Expression)


State 35

   38 ProductExpr: ProductExpr . '*' Term
   45 Expression: ProductExpr .

    '*'  shift, and go to state 62

    $default  reduce using rule 45 (Expression)


State 36

   40 AndExpr: AndExpr . TAND Term
   46 Expression: AndExpr .

    TAND  shift, and go to state 63

    $default  reduce using rule 46 (Expression)


State 37

   47 Expression: CompareExpr .

    $default  reduce using rule 47 (Expression)


State 38

   25 Stmt: Expression . ';'

    ';'  shift, and go to state 64


State 39

   24 Stmt: MemAcess . assignment Expression ';'

    assignment  shift, and go to state 65


State 40

   60 Term: Call .

    $default  reduce using rule 60 (Term)


State 41

   35 SumExpr: Term . '+' Term
   37 ProductExpr: Term . '*' Term
   39 AndExpr: Term . TAND Term
   41 CompareExpr: Term . lessThan Term
   42            | Term . '#' Term
   48 Expression: Term .

    TAND      shift, and go to state 66
    lessThan  shift, and go to state 67
    '*'       shift, and go to state 68
    '+'       shift, and go to state 69
    '#'       shift, and go to state 70

    $default  reduce using rule 48 (Expression)


State 42

   13 ArgsTrailed: ArgsTrailed id ',' .

    $default  reduce using rule 13 (ArgsTrailed)


State 43

   56 Call: id . '(' CallArgs ')'
   59 Term: id .

    '('  shift, and go to state 51

    $default  reduce using rule 59 (Term)


State 44

   31 Unary: '*' .

    $default  reduce using rule 31 (Unary)


State 45

   27 IfExprHead: TIF Expression . TTHEN

    TTHEN  shift, and go to state 71


State 46

   26 Stmt: TRETURN Expression . ';'

    ';'  shift, and go to state 72


State 47

   22 Stmt: TBREAK id . ';'

    ';'  shift, and go to state 73


State 48

   23 Stmt: TCONT id . ';'

    ';'  shift, and go to state 74


State 49

   17 Stmt: TVAR id . assignment Expression ';'

    assignment  shift, and go to state 75


State 50

   18 Stmt: id assignment . Expression ';'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 76
    Call         go to state 40
    Term         go to state 41


State 51

   56 Call: id '(' . CallArgs ')'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    $default  reduce using rule 49 (CallArgs)

    Unary            go to state 31
    UnaryList        go to state 32
    PrefixTerm       go to state 33
    SumExpr          go to state 34
    ProductExpr      go to state 35
    AndExpr          go to state 36
    CompareExpr      go to state 37
    Expression       go to state 77
    CallArgs         go to state 78
    CallArgsTrailed  go to state 79
    Call             go to state 40
    Term             go to state 41


State 52

   28 LoopHead: id ':' . TLOOP

    TLOOP  shift, and go to state 80


State 53

   58 Term: '(' Expression . ')'

    ')'  shift, and go to state 81


State 54

   55 MemAcess: '*' Term .

    $default  reduce using rule 55 (MemAcess)


State 55

    7 Funcdef: id '(' Args ')' StmtList TEND . ';'

    ';'  shift, and go to state 82


State 56

   16 StmtList: StmtList Stmt .

    $default  reduce using rule 16 (StmtList)


State 57

   16 StmtList: StmtList . Stmt
   19 Stmt: IfExprHead StmtList . TEND ';'
   20     | IfExprHead StmtList . TELSE StmtList TEND ';'

    TIF      shift, and go to state 16
    TELSE    shift, and go to state 83
    TEND     shift, and go to state 84
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    Stmt         go to state 56
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 58

   16 StmtList: StmtList . Stmt
   21 Stmt: LoopHead StmtList . TEND ';'

    TIF      shift, and go to state 16
    TEND     shift, and go to state 85
    TRETURN  shift, and go to state 17
    TBREAK   shift, and go to state 18
    TCONT    shift, and go to state 19
    TVAR     shift, and go to state 20
    TNOT     shift, and go to state 21
    id       shift, and go to state 22
    number   shift, and go to state 23
    '('      shift, and go to state 24
    '-'      shift, and go to state 25
    '*'      shift, and go to state 26

    Stmt         go to state 56
    IfExprHead   go to state 29
    LoopHead     go to state 30
    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 38
    MemAcess     go to state 39
    Call         go to state 40
    Term         go to state 41


State 59

   33 UnaryList: UnaryList Unary .

    $default  reduce using rule 33 (UnaryList)


State 60

   34 PrefixTerm: UnaryList Term .

    $default  reduce using rule 34 (PrefixTerm)


State 61

   36 SumExpr: SumExpr '+' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 86


State 62

   38 ProductExpr: ProductExpr '*' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 87


State 63

   40 AndExpr: AndExpr TAND . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 88


State 64

   25 Stmt: Expression ';' .

    $default  reduce using rule 25 (Stmt)


State 65

   24 Stmt: MemAcess assignment . Expression ';'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44

    Unary        go to state 31
    UnaryList    go to state 32
    PrefixTerm   go to state 33
    SumExpr      go to state 34
    ProductExpr  go to state 35
    AndExpr      go to state 36
    CompareExpr  go to state 37
    Expression   go to state 89
    Call         go to state 40
    Term         go to state 41


State 66

   39 AndExpr: Term TAND . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 90


State 67

   41 CompareExpr: Term lessThan . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 91


State 68

   37 ProductExpr: Term '*' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 92


State 69

   35 SumExpr: Term '+' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 93


State 70

   42 CompareExpr: Term '#' . Term

    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24

    Call  go to state 40
    Term  go to state 94


State 71

   27 IfExprHead: TIF Expression TTHEN .

    $default  reduce using rule 27 (IfExprHead)


State 72

   26 Stmt: TRETURN Expression ';' .

    $default  reduce using rule 26 (Stmt)


State 73

   22 Stmt: TBREAK id ';' .

    $default  reduce using rule 22 (Stmt)


State 74

   23 Stmt: TCONT id ';' .

    $default  reduce using rule 23 (Stmt)


State 75

   17 Stmt: TVAR id assignment . Expression ';'

    TNOT    shift, and go to state 21
    id      shift, and go to state 43
    number  shift, and go to state 23
    '('     shift, and go to state 24
    '-'     shift, and go to state 25
    '*'     shift, and go to state 44
